# shipyard

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  shipyard.toml  todo
docs/design/: v1.0.md
ideas/: Environment Detection & Workflow Suggestions.md  Project Bootstrap & Standards Assistant.md
src/shipyard/: cli.py  command.py  config.py  core.py  error.py  main.py  parser.py  shipyard.py  types.py  utils.py
src/shipyard/commands/doctor/: main.py  metadata.py
src/shipyard/commands/init/: main.py  metadata.py
test/: test_tokenizer.py  test_utils.py
